compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__subject_int_float_guard_tuple.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "type X { X(a: Int, b: Float) }\nfn x() { case X(1, 2.0) { x if x == X(2.0, 1) -> 1 } }"
---
error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:2:10
  │
2 │ fn x() { case X(1, 2.0) { x if x == X(2.0, 1) -> 1 } }
  │          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

This case expression does not have a pattern for all possible values.
If it is run on one of the values without a pattern then it will crash.

The missing patterns are:

    _

error: Type mismatch
  ┌─ /src/one/two.gleam:2:39
  │
2 │ fn x() { case X(1, 2.0) { x if x == X(2.0, 1) -> 1 } }
  │                                       ^^^

Expected type:

    Int

Found type:

    Float
