compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__suggest_unqualified_import_for_constructor_without_existing_import.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n        pub fn go() { Wobble }\n        "
---
----- SOURCE CODE
-- gleam/wibble.gleam

            pub type Wobble { Wobble }
            

-- main.gleam

        pub fn go() { Wobble }
        

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:2:23
  │
2 │         pub fn go() { Wobble }
  │                       ^^^^^^

The custom type variant constructor `Wobble` is not in scope here.
Hint: Did you mean to import the `Wobble` value from the `gleam/wibble` module?
