compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__suggest_wrapping_a_value_into_error_if_types_match.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub fn main() {\n  case todo {\n    1 -> Error(1)\n    _ -> 1\n  }\n}\n"
---
----- SOURCE CODE

pub fn main() {
  case todo {
    1 -> Error(1)
    _ -> 1
  }
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:5:5
  │
5 │     _ -> 1
  │     ^^^^^^
  │          │
  │          Did you mean to wrap this in an `Error`?

This case clause was found to return a different type than the previous
one, but all case clauses must return the same type.

Expected type:

    Result(a, Int)

Found type:

    Int
